testsuite/tests/rename/should_fail/RnStaticPointersFail02.stderr
RnStaticPointersFail02.hs:5:5: error: [GHC-39999]
    • No instance for ‘ghc-internal-9.1500.0:GHC.Internal.Data.Typeable.Internal.Typeable
                         t0’
        arising from a static form
    • In the expression: static T
      In an equation for ‘f’: f = static T

RnStaticPointersFail02.hs:5:12: error: [GHC-01928]
    • Illegal term-level use of the type constructor ‘T’
    • defined at RnStaticPointersFail02.hs:7:1
    • In the body of a static form: T
      In the expression: static T
      In an equation for ‘f’: f = static T

